@@ -330,6 +330,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 8933) Fix maintenance/reassignEdits.php script
 * (bug 9440) Added "mediawikiwiki" interwiki prefix to MediaWiki.org
 * (bug 2979) Import now gracefully skips invalid titles with a warning
+* Restore '--norc' option for maintenance/importTextFile.php
+* Help information for maintenance/importTextFile.php now easier to read on
+  consoles
 
 == Languages updated ==
 
